--- a/db/copy.yml
+++ b/db/copy.yml
@@ -235,4 +235,26 @@ copy:
       </ol>
     </li>
 
+#thank you
+- location: thank-you-intro
+  copy_content: |
+    * Thank you intro
+- location: thank-you-image-left
+  copy_content: |
+    carousel_1.jpg
+- location: thank-you-image-left-caption
+  copy_content: |
+    image caption
+- location: thank-you-image-middle
+  copy_content: |
+    carousel_2.jpg
+- location: thank-you-image-middle-caption
+  copy_content: |
+    image caption middle
+- location: thank-you-image-right
+  copy_content: |
+    carousel_3.jpg
+- location: thank-you-image-right-caption
+  copy_content: |
+    image caption right
 
