Get units cookie working, but then disabled it per Chris

--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -80,7 +80,7 @@ activities:
     - title: Serving
       image_id: final_dish_IMG_5402.jpg
       directions: |
-        * Sprinke coriander, black pepper, and Maldon sea salt on each portion of salmon while they are on a sheet tray.
+        * Sprinkle coriander, black pepper, and Maldon sea salt on each portion of salmon while they are on a sheet tray.
         * Strain pickles from their brine and drain them on paper towel.
         * Add the salt to the watercress puree.
         * Place a spoonful of horseradish cream, a spoonful of watercress puree, and one salmon portion on each chilled plate.
