Add dbalatero@gmail.com to db/seeds

--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -27,6 +27,10 @@ admins:
   password: hueezer123
   name: Huy Nguyen
 
+- email: dbalatero@gmail.com
+  password: lingling
+  name: David Balatero
+
 activities:
 # - title: Lecture
 #   youtube_id: ydOB-YNJ8Jw
