update seed with updated admin account

--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -18,12 +18,12 @@ admins:
 - email: edward@delvekitchen.com
   password: howtochef22
   name: Edward Starbird
-  
+
 - email: michaelnatkin@gmail.com
   password: pectinex
   name: Michael Natkin
 
-- email: hueezer@gmail.com
+- email: huy@chefsteps.com
   password: hueezer123
   name: Huy Nguyen
 
