--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -29,7 +29,7 @@ staging:
   config: &default
     BUNDLE_WITHOUT: "development:test:guard"
     RAILS_ENV: "staging"
-    FOG_DIRECTORY: chefsteps-staging-assets
+    # FOG_DIRECTORY: chefsteps-staging-assets
     FOG_PROVIDER: AWS
     BUILDPACK_URL: https://github.com/ndbroadbent/heroku-buildpack-turbo-sprockets.git
   addons:
