--- a/config/asset_sync.yml
+++ b/config/asset_sync.yml
@@ -1,26 +1,26 @@
-# defaults: &defaults
-#   fog_provider: 'AWS'
-#   aws_access_key_id: "<%= ENV['AWS_ACCESS_KEY_ID'] %>"
-#   aws_secret_access_key: "<%= ENV['AWS_SECRET_ACCESS_KEY'] %>"
-#   fog_directory: "<%= ENV['FOG_DIRECTORY'] %>"
-#   # You may need to specify what region your storage bucket is in
-#   # fog_region: "eu-west-1"
-#   existing_remote_files: delete
-#   # To delete existing remote files.
-#   # existing_remote_files: delete 
-#   always_upload: ['navigation_bootstrap.js', 'global_navigation.css', 'jquery.mjs.nestedSortable.js']
-#   gzip_compression: true
-#   # Fail silently.  Useful for environments such as Heroku
-#   # fail_silently = true
+defaults: &defaults
+  fog_provider: 'AWS'
+  aws_access_key_id: "<%= ENV['AWS_ACCESS_KEY_ID'] %>"
+  aws_secret_access_key: "<%= ENV['AWS_SECRET_ACCESS_KEY'] %>"
+  fog_directory: "<%= ENV['FOG_DIRECTORY'] %>"
+  # You may need to specify what region your storage bucket is in
+  # fog_region: "eu-west-1"
+  existing_remote_files: delete
+  # To delete existing remote files.
+  # existing_remote_files: delete 
+  always_upload: ['navigation_bootstrap.js', 'global_navigation.css', 'jquery.mjs.nestedSortable.js']
+  gzip_compression: true
+  # Fail silently.  Useful for environments such as Heroku
+  # fail_silently = true
 
-# development:
-#   <<: *defaults
+development:
+  <<: *defaults
 
-# test:
-#   <<: *defaults
+test:
+  <<: *defaults
 
-# staging:
-#   <<: *defaults
+staging:
+  <<: *defaults
 
-# production:
-#   <<: *defaults
+production:
+  <<: *defaults
